# cardano-scrawls

./: .gitignore  Cargo.toml  NOTICE  README.md  flake.nix
.github/workflows/: ci.yaml
src/: error.rs  lib.rs  reader.rs
src/reader/: mod.rs
src/types/: chunk.rs  digest.rs  header.rs  manifest.rs  merkle.rs  mod.rs
tests/fixtures/: minimal-raw.scls  minimal.scls
